--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "devDependencies": {
     "jest-expo": "25.0.0",
+    "jest-styled-components": "^4.10.0",
     "react-native-scripts": "1.11.1",
-    "react-test-renderer": "16.2.0"
+    "react-test-renderer": "^16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -19,6 +20,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.1",
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
