--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "jest-expo": "25.0.0",
-    "jest-styled-components": "^4.10.0",
+    "jest-styled-components": "^4.11.0-1",
     "react-native-scripts": "1.11.1",
     "react-test-renderer": "^16.2.0"
   },
