--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest-expo": "25.0.0",
     "jest-styled-components": "^4.11.0-1",
     "react-native-scripts": "1.11.1",
